fixing margin issue on mobile

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ h2 {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1px;
   max-width: 400px;
-  margin: 50px auto;
+  margin: 30px auto;
   border: 1px solid #f1f1f1;
   background: #f1f1f1;
 }
